--- a/resources/config.json
+++ b/resources/config.json
@@ -1,6 +1,6 @@
 {
-	url:test
-	port:12
-	database_name:asd
-	script_path:asd
+    "url":"test",
+	"port":12,
+	"database_name":"asd",
+	"script_path":"asd"
 }
